// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`execute brent api should return success 1`] = `
{
  "data": {
    "result": 83.86309,
  },
  "jobRunID": "1",
  "providerStatusCode": 200,
  "result": 83.86309,
  "statusCode": 200,
}
`;

exports[`execute wti api should return success 1`] = `
{
  "data": {
    "result": 82.5261,
  },
  "jobRunID": "1",
  "providerStatusCode": 200,
  "result": 82.5261,
  "statusCode": 200,
}
`;
